Bug 1362321 - Recreate draw target after failing to create it in gfxPlatform::Init; r?bas

MozReview-Commit-ID: KmqWpjNBXTB